--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -613,7 +613,7 @@
                             <div class="col-12 col-md-12 col-lg-4">
                                 <div class="wrapper">
                                     <!--Image-->
-                                    <div class="mbr-figure" style="width: 100%;">
+                                    <div class="mbr-figure" style="width: 80%;">
                                         <img src="assets/images/def-698x600.jpg" alt="Mobirise" title="">
                                     </div>
                                 </div>
@@ -744,7 +744,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="VCIsymKbZzLfmEGFMY4wJSJoip9bIHs7aRmaBzAQdZkCRV2YiJQhJRZP7C8qAUX2bIHSQkIWHyK56dTg8pc/TRlkqRYHKTJHYWbgusWoHuZ4zMAx4sUifXS1LduQYEYm">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="kIO2grdyTHxaFo15u6CM+fOrHjFq8nzgm0YI89d3YPtkMWqKASQcu87LLGuGS/NDcCAWwWKORJjcBMZXkl7cnI5yqrJkzLKMUvnap2evMraWubg4+6OidRfmrELBVLX7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
