--- a/page1.html
+++ b/page1.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
     
      
 
