--- a/page2.html
+++ b/page2.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
     
      
 
