--- a/page2.html
+++ b/page2.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.buruntzaldeaikt.eus"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" style="margin-left:10px" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
     
      
 
