--- a/aukerak.html
+++ b/aukerak.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html#header2-5h" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.buruntzaldeaikt.eus"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" style="margin-left:10px" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
 
     
 
@@ -401,7 +401,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="5aDDWy6uNmnAWkUStWendPq012kvcgKrJnmyysgkUwcywkxpfrk5d9bZnPyVSZe2jz/V3317F+V+HkniSGyujLdD/JpBWUDb1AJHextMfoWy9Lqw5kZrAa7UiU1jvHH6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="nY7nzYZPx/FL1PN82dhEDaEAaWpC0LGtYZU11klKje+ByKLp6u4TjXo0dy27qoQwdIwegcJOzqKPel48xlipwgX5U1zeGgD6EdM5taJN08POlvi6uh3Zw0fQzMa4Dlph">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
