--- a/page6.html
+++ b/page6.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html#header2-5h" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.buruntzaldeaikt.eus"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" style="margin-left:10px" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rt574L0uI1 mbr-fullscreen mbr-parallax-background" id="header2-5h">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-rt574L0uI1 mbr-fullscreen mbr-parallax-background" id="header2-5h">
 
     
 
@@ -336,7 +336,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="v+/zDsxTNdwcDuw16R1Gbg5/got66k3oZCmc1j/EJ2XSinq6beBE0Rf7I5lw8ME1crqgj0KvJA3G7ZAQdtjVvuCOVv1Ad58zKy7+jy7FZHJY3tO6zGgbI16C5xxFqBxA">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="fAbI7xopNSkrwt8h4IW7IV5Dtngmvg954SMgydxw/dNmnYBgFmbuk4mnn4dHTJ2A51PjyJhPo7Pz226b13GiReRlGLjLEBc5pg0rebd4NSWCnrOU6Z0I/3wX9rdiQnui">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
