--- a/aukerak.html
+++ b/aukerak.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
 
     
 
@@ -401,7 +401,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="lyUqas8023M63T8XG8pM+qm75vYm8mggjqms5fPHzS/TD40ExKF783BN7dWHlPhaKQkFEpBTAlWhH3+hX4JSBcDuLuEEuXHuk7s4B0zbyWkUhTsel040uF2Kt3YZJ4Wt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="yc0/Q0Ac5OyHwV4EXh3gKwm5EHvPe0+GfI1WtamUqWflGBnWhRYzdyubgYuje54JXpahgHu7FGmAC/Dv6fQ5T8Pg5AjghqfR6mB+5v5UghuhvOvIXR60vI0O5bG2cW/t">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
