--- a/ezeztatua.html
+++ b/ezeztatua.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
     
      
 
