--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section article content1 cid-rqZEgEpfJI" id="content1-1u">
     
      
 
