--- a/ezeztatua.html
+++ b/ezeztatua.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
     
      
 
@@ -107,7 +107,7 @@
                         <img src="assets/images/logo.gif" alt="Mobirise" title="" style="height: 8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
