--- a/aukerak.html
+++ b/aukerak.html
@@ -49,7 +49,7 @@
                         <img src="assets/images/logo.gif" alt="Mobirise" title="" style="height: 8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
 
     
 
@@ -401,7 +401,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="yc0/Q0Ac5OyHwV4EXh3gKwm5EHvPe0+GfI1WtamUqWflGBnWhRYzdyubgYuje54JXpahgHu7FGmAC/Dv6fQ5T8Pg5AjghqfR6mB+5v5UghuhvOvIXR60vI0O5bG2cW/t">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="o5WfqtI4E+jDjadbLeK0qMhgOoV/dWisNrJqO85iGnGDJNL45y0nr2VS/Uk+c7n4rYdwGBBiFIEly7brLrl2pZ9U4LeNTSB0lVqgPpfWCFhAJ44+L9WpYl/7ptsFCKvQ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
