--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="assets/images/logo.gif" alt="Mobirise" title="" style="height: 8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -760,7 +760,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="wg2G9+zJjjcc+FoS0+Dpim9PGwn0Patet1KkcHCclIlipQOczGs1xIvuznzKSacsKxM6SDxQ6Fs5XgkUtO7kywBhUrkRLI5sRJw60beV8oq8MZhGtF9ldQVBXXHmZPAC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="GceZkwcT3myKR1ilnPIf4p0P42VWAA4Pz5z4vJGxK/KU4HIzVaT/Rw231Cz5P0B/jg9XNlxugtjpIUiCoZEx/oVAp0HnUD3FtLitHX4JKbgngZ+ecH+5U3W7GNfRb7AY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
