--- a/page1.html
+++ b/page1.html
@@ -47,7 +47,7 @@
                         <img src="assets/images/logo.gif" alt="Mobirise" title="" style="height: 8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
     
      
 
