--- a/saioak-bonuak.html
+++ b/saioak-bonuak.html
@@ -49,7 +49,7 @@
                         <img src="assets/images/logo.gif" alt="Mobirise" title="" style="height: 8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="index.html#header2-2x">ONLINE DENDA<br>Tienda Online</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="cid-rt574L0uI1 mbr-fullscreen mbr-parallax-background" id="header2-5h">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="cid-rt574L0uI1 mbr-fullscreen mbr-parallax-background" id="header2-5h">
 
     
 
@@ -410,7 +410,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="aHxAgPgBTtSSCvAM6FbliYUqXLNOi64XJw9Xcc64+TASccflGCSqti8T1oFJFPzUpy8kf7QN9VQTpYibDrBwR5q4lyxO7/BEgQqWltT1mrTF2EoEgHknQThqx2fpog9P">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="ZvvE3fiugc5TQD5GX4ok/VL87zbpFNtKvWc89DeEz6gpk6smHyWnSTfNYNEyp8mYe/T83QONb5N9xJKgRJrzmt4v8ryi9XuuxDpco/lobcZz7cY5tqQkNC0jvk8PEw0+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
