--- a/page1.html
+++ b/page1.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html#header2-5h" aria-expanded="false">Saioak/Bonoak | Sesiones/Bonos</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak.html#content9-5b" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#form1-30" aria-expanded="false"><span class="material material-contact-mail mbr-iconfont mbr-iconfont-btn"></span>Kontaktua | Contacto</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.buruntzaldeaikt.eus"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" style="margin-left:10px" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section article content1 cid-rqZCsGsWIK" id="content1-1p">
     
      
 
@@ -319,7 +319,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
