--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -223,7 +223,7 @@
                         <h4 class="card-title mbr-fonts-style display-5">
                             MOTXILA HANDIA<br>mochila grande</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Taldeko motxila ofiziala. Neurriagatik gazte eta helduagoentzat egokiagoa. Txankletak eta gauza hezeak gordetzeko konpartimendua dakar eta gauza txikiak gordetzeko  bi poltsiko eta bi sare ere bai. Barnekaldean bi konpartimentu ditu.
-<br><br><em>Mochila oficial del club. Por el tamaño, ñas adecuado para los/las jóvenes y los/las adultos. Trae compartimento para chancletas y ropa húmeda y 2 bolsillos y 2 redes para objetos. En el interior cuenta con dos compartimentos.</em></p>
+<br><br><em>Mochila oficial del club. Por el tamaño, más adecuado para los/las jóvenes y los/las adultos. Trae compartimento para chancletas y ropa húmeda y 2 bolsillos y 2 redes para objetos. En el interior cuenta con dos compartimentos.</em></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="SVQTUNNWGXB32">
@@ -761,7 +761,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="P/Nu+g2aaPLmEDrqqeh/FZXZla0FzA8thTzP5WhljAuZdNb6mnZ7btWgPjhHMD0846meyvTeRFA3loKbQXIP5Xuw0gP1Ne4s4CvoI9hQrM8Z5kzmN1Ffqgl41Huehk3j">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="ufISmpvWqNkvu9VbO2QTJQrgrWBoCiNDVTTInoI5xNuow4O5Mlso4+HQu2H4lEByEI/EtqQzsxgHQhiszK0NSSwvqrmoSnl+aSt6qLMrKQ8S0nitJs/IQu8Gr4qzdl8W">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
