--- a/Nota-Legal.html
+++ b/Nota-Legal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -72,7 +72,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section article content9 cid-rH8ozOjFL1" id="content9-61">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article content9 cid-rH8ozOjFL1" id="content9-61">
     
      
 
