--- a/ezeztatua.html
+++ b/ezeztatua.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -66,7 +66,7 @@ UA-26459329-1
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
     
      
 
