--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -90,7 +90,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -396,7 +396,6 @@ UA-26459329-1
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
 	<option value="XL">XL €16,00 EUR</option>
 	<option value="L">L €16,00 EUR</option>
-	<option value="XS">XS €16,00 EUR</option>
 	<option value="8">8 €16,00 EUR</option>
 	<option value="6">6 €16,00 EUR</option>
 </select> </td></tr>
@@ -435,7 +434,6 @@ UA-26459329-1
 	<option value="L">L €17,00 EUR</option>
 	<option value="XS">XS €17,00 EUR</option>
 	<option value="12">12 €17,00 EUR</option>
-	<option value="10">10 €17,00 EUR</option>
 	<option value="8">8 €17,00 EUR</option>
 	<option value="6">6 €17,00 EUR</option>
 </select> </td></tr>
@@ -491,6 +489,8 @@ UA-26459329-1
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
 	<option value="M">M €16,00 EUR</option>
 	<option value="S">S €16,00 EUR</option>
+    <option value="16">16 €16,00 EUR</option>
+    <option value="14">14 €16,00 EUR</option>
 	<option value="12">12 €16,00 EUR</option>
     <option value="10">10 €16,00 EUR</option>
 </select> </td></tr>
@@ -531,6 +531,7 @@ UA-26459329-1
 	<option value="XL">XL €17,00 EUR</option>
 	<option value="M">M €17,00 EUR</option>
 	<option value="S">S €17,00 EUR</option>
+    <option value="10">10 €17,00 EUR</option>
 </select> </td></tr>
 </tbody></table>
 <input type="hidden" name="currency_code" value="EUR">
@@ -995,7 +996,7 @@ UA-26459329-1
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="qo23DQ1HvdH2PTVOyKHDDc01CX7nC4NOVl4IQZa4psfqUEt+jvzZrGQgS0XQmlFk1RMRt1/45WsJDlQX/EeMOvEoPwblQXUaKZFQXjQkvuU8J3dV8z9+5SyCJSJhccK6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="Oz5IoLgvZBO9WnBdwtkLRft97wwQ1YXO3vtHpygzS+6qnQBrigXzd1RNxzxSX/8DC4BSPjlZk8eS0Qsup+AU0HN4UPnMEIfuwesRUDjhx6096ryQ0QQ7WEx+zQdIMKMK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
