--- a/aukerak-oportunidades.html
+++ b/aukerak-oportunidades.html
@@ -74,7 +74,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-rsWm4vSKsa mbr-fullscreen mbr-parallax-background" id="header2-4x">
 
     
 
@@ -428,7 +428,7 @@ UA-26459329-1
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="mjoQDENVLh+vPC2j241uNEU7WHMwZR7Uv1DyDQIA4s5YoTC8ZMnxtAnR07jnv4zXaM8Xktoy7TlG6ydpInm7QVfunHkiSU5/6RpDj2CPjW6CJuUN5y56l0NRbZNunSy9">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="lGMDZ8CUjIeCXGwDTt+vlYT/aArUd+eyMGDWJfeUJPDOd0K8q0yHZo0fXdtewAK/yJWaNcO0QyZZjqK3w19GV4r7PD9665YszOiNzAe22rRQZ9Xe0QZJR3bIyqdRPp4T">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -658,9 +658,9 @@ UA-26459329-1
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-colortext="#424a4d" data-cookie-colorbg="rgba(234, 239, 241, 0.99)" data-cookie-colorbutton="#ffffff" data-cookie-colorlink="#787324" data-cookie-underlinelink="true" data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-colorButton='#ffffff' data-cookie-colorLink='#787324' data-cookie-underlineLink='true' data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
 
 Ésta web utiliza cookies para mejorar la experiencia de uso. Lea nuestro  <a href='https://www.denda.buruntzaldeaikt.eus/Nota-Legal.html'>Aviso legal, Condiciones de Uso y Política de Privacidad</a>.">
   </body>
