--- a/ezeztatua.html
+++ b/ezeztatua.html
@@ -66,7 +66,7 @@ UA-26459329-1
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section article content9 cid-rsVt4EVUmv" id="content9-4j">
     
      
 
@@ -288,9 +288,9 @@ UA-26459329-1
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-colortext="#424a4d" data-cookie-colorbg="rgba(234, 239, 241, 0.99)" data-cookie-colorbutton="#ffffff" data-cookie-colorlink="#787324" data-cookie-underlinelink="true" data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-colorButton='#ffffff' data-cookie-colorLink='#787324' data-cookie-underlineLink='true' data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
 
 Ésta web utiliza cookies para mejorar la experiencia de uso. Lea nuestro  <a href='https://www.denda.buruntzaldeaikt.eus/Nota-Legal.html'>Aviso legal, Condiciones de Uso y Política de Privacidad</a>.">
   </body>
