--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -755,8 +755,8 @@ UA-26459329-1
 <input type="hidden" name="hosted_button_id" value="58R2L7B6UPKFA">
 <table>
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
-	 <option value="L">L €22,00 EUR</option>
-     <option value="12">12 €22,00 EUR</option>
+	 <option value="12">12 €22,00 EUR</option>
+     <option value="10">10 €22,00 EUR</option>
 </select> </td></tr>
 </tbody></table>
 <input type="hidden" name="currency_code" value="EUR">
@@ -996,7 +996,7 @@ UA-26459329-1
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="jOzj+aBFnbFDk5FLTFtFMrqbJkGhqzxeNon65J5kCBuWPtOvK7gZwyU+8axvzbmKUhrsJcL61RNlcpyaA5WAQiHOxbGcc+FKFuViCOmTi4wk9F70Wi/OLOK7uHYpOWJs">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="wMISumMUERPqCh/ANs2B54qWnkCLMssG6/KDlbRf6n5ksASiNUQA17uQs421/wsxCjxHgt1LibJe95ahdgI3yisrkYMQZL2mqju3YpC0uQ0R0X0vzs2vDYn9CjGGvjN2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1226,9 +1226,9 @@ UA-26459329-1
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-colortext="#424a4d" data-cookie-colorbg="rgba(234, 239, 241, 0.99)" data-cookie-colorbutton="#ffffff" data-cookie-colorlink="#787324" data-cookie-underlinelink="true" data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+  <input name="cookieData" type="hidden" data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-colorButton='#ffffff' data-cookie-colorLink='#787324' data-cookie-underlineLink='true' data-cookie-text="Webgune honek cookiak erabiltzen ditu, nabigazio esperientzia hobea eskaintzeko asmoz. Irakurri gure <a href='https://www.denda.buruntzaldeaikt.eus/Lege-Oharra.html'>Lege Oharra, Baldintza Orokorrak eta Pribatutasun Politika</a>.
 
 Ésta web utiliza cookies para mejorar la experiencia de uso. Lea nuestro  <a href='https://www.denda.buruntzaldeaikt.eus/Nota-Legal.html'>Aviso legal, Condiciones de Uso y Política de Privacidad</a>.">
   </body>
